--- a/KTNV-LiveDemo/KTNV-LiveDemo.csproj
+++ b/KTNV-LiveDemo/KTNV-LiveDemo.csproj
@@ -121,6 +121,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Content Include="Content\anh\daita.png" />
+    <Content Include="Content\anh\thuongta.png" />
+    <Content Include="Content\anh\trungta.png" />
     <Content Include="Content\anh\tt.png" />
     <Content Include="Content\chutri.txt" />
     <Content Include="Content\daita.png" />
